--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ui-cmpt",
-  "version": "1.0.0",
+  "name": "@zecos/ui",
+  "version": "0.0.1",
   "description": "UI components for zecos",
-  "author": "zecos",
+  "author": "Zane Hitchcox",
   "license": "MIT",
-  "repository": "zecos/ui-cmpt",
+  "repository": "https://github.com/zecos/ui-cmpt",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
