--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "UI components for zecos",
   "author": "Zane Hitchcox",
   "license": "MIT",
-  "repository": "https://github.com/zecos/ui-cmpt",
+  "repository": "https://github.com/zecos/ui",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
