--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@zecos/ui",
-  "version": "0.0.4",
-  "description": "UI components for zecos",
+  "name": "@zecos/inputz",
+  "version": "0.0.1",
+  "description": "Input UI components for zecos",
   "author": "Zane Hitchcox",
   "license": "MIT",
-  "repository": "https://github.com/zecos/ui",
+  "repository": "https://github.com/zecos/inputz",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
@@ -26,7 +26,10 @@
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@zecos/fieldz": "^0.0.2",
+    "@zecos/react-fieldz": "^0.1.0"
+  },
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^15.0.0 || ^16.0.0",
