--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "test:watch": "react-scripts-ts test --env=jsdom",
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "prepare": "yarn run build",
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build"
   },
   "dependencies": {
-    "@zecos/fieldz": "^0.0.2",
-    "@zecos/react-fieldz": "^0.1.0"
+    "@zecos/fieldz": "^0.0.8",
+    "@zecos/react-fieldz": "^0.2.2",
+    "@zecos/validatorz": "^0.0.2"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
@@ -44,8 +44,6 @@
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.1.4",
     "gh-pages": "^1.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
     "react-scripts-ts": "^2.16.0",
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
