--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.exclude": {
     "node_modules": true,
     "yarn.lock": true,
-    "yarn-error.log": true
+    "yarn-error.log": true,
+    "dist": true
   }
 }
