--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,6 @@
   "files.exclude": {
     "node_modules": true,
     "yarn.lock": true,
-    "yarn-error.log": true,
-    "dist": true
+    "yarn-error.log": true
   }
 }
