--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build"
   },
+  "types": "dist/src/index.d.ts",
   "dependencies": {
     "@zecos/fieldz": "^0.0.8",
     "@zecos/react-fieldz": "^0.2.2",
-    "@zecos/validatorz": "^0.0.2"
+    "@zecos/validators": "^0.0.2"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
